src/test/deca/context/invalid/25_FieldExtendsMethod.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 17: ContextualError: f isn't a field
// 
// Historique:
//    cree le 01/01/2022

class A {
	int f() {
		return 1;
	}
}
class B extends A {
	// Doit etre refuse.
	int f;
}
